add alert message

--- a/composer.json
+++ b/composer.json
@@ -20,9 +20,10 @@
         "yiisoft/yii2-swiftmailer": "~2.0.0",
         "yiidoc/yii2-redactor": "*",
         "kartik-v/yii2-widget-switchinput": "*",
+        "kartik-v/yii2-widget-select2": "@dev",
+        "kartik-v/yii2-widget-growl": "*",
         "kartik-v/yii2-ipinfo": "@dev",
         "kartik-v/yii2-social": "dev-master",
-        "kartik-v/yii2-widget-select2": "@dev",
         "giovdk21/yii2-syntaxhighlighter": "dev-master",
         "2amigos/yii2-selectize-widget": "~1.0",
         "sinergi/browser-detector": "*",
